--- a/themes/hello-friendly/assets/scss/_list.scss
+++ b/themes/hello-friendly/assets/scss/_list.scss
@@ -69,7 +69,6 @@
       border-radius: 2px;
       color: $light-background;
       border-bottom: none;
-      color: $link-color;
       text-decoration: none;
       border-bottom: 0.15em solid $link-color;
       padding-bottom: .05em;
